--- a/OutlandSpaceEngine/OutlandSpaceEngine.csproj
+++ b/OutlandSpaceEngine/OutlandSpaceEngine.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>EngineCore</RootNamespace>
+    <RootNamespace>Engine</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
