--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OutlandSpaceCommon\OutlandSpaceCommon.csproj" />
     <ProjectReference Include="..\OutlandSpaceEngine\OutlandSpaceEngine.csproj" />
   </ItemGroup>
 
