--- a/OutlandSpaceClient/OutlandSpaceClient.csproj
+++ b/OutlandSpaceClient/OutlandSpaceClient.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.12" />
+  </ItemGroup>
+
 </Project>
