--- a/OutlandSpaceClientUpdater/OutlandSpaceClientUpdater.csproj
+++ b/OutlandSpaceClientUpdater/OutlandSpaceClientUpdater.csproj
@@ -1,13 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
+    <RootNamespace>Updater</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OutlandSpaceClientUpdater\OutlandSpaceClientUpdater.csproj" />
+    <PackageReference Include="log4net" Version="2.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OutlandSpaceCommon\OutlandSpaceCommon.csproj" />
     <ProjectReference Include="..\OutlandSpaceEngine\OutlandSpaceEngine.csproj" />
     <ProjectReference Include="..\OutlandSpaceUniverse\OutlandSpaceUniverse.csproj" />
