Add drawing steps for turn on Client side

--- a/OutlandSpaceClient/OutlandSpaceClient.csproj
+++ b/OutlandSpaceClient/OutlandSpaceClient.csproj
@@ -13,4 +13,16 @@
     <ProjectReference Include="..\OutlandSpaceUniverse\OutlandSpaceUniverse.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Configuration\Logs.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configuration\OutlandSpace.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configuration\Version.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
