--- a/OutlandSpaceClientUpdater.Tests/OutlandSpaceClientUpdater.Tests.csproj
+++ b/OutlandSpaceClientUpdater.Tests/OutlandSpaceClientUpdater.Tests.csproj
@@ -14,13 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OutlandSpaceCommon\OutlandSpaceCommon.csproj" />
-    <ProjectReference Include="..\OutlandSpaceEngine\OutlandSpaceEngine.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="CommonTests\" />
-    <Folder Include="UniverseTests\" />
+    <ProjectReference Include="..\OutlandSpaceClientUpdater\OutlandSpaceClientUpdater.csproj" />
   </ItemGroup>
 
 </Project>
