--- a/OutlandSpaceUniverse.Tests/OutlandSpaceUniverse.Tests.csproj
+++ b/OutlandSpaceUniverse.Tests/OutlandSpaceUniverse.Tests.csproj
@@ -14,13 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OutlandSpaceCommon\OutlandSpaceCommon.csproj" />
     <ProjectReference Include="..\OutlandSpaceEngine\OutlandSpaceEngine.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="CommonTests\" />
-    <Folder Include="UniverseTests\" />
+    <ProjectReference Include="..\OutlandSpaceUniverse\OutlandSpaceUniverse.csproj" />
   </ItemGroup>
 
 </Project>
