--- a/OutlandSpaceUniverse/OutlandSpaceUniverse.csproj
+++ b/OutlandSpaceUniverse/OutlandSpaceUniverse.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="LanguageExt.Core" Version="4.0.3" />
     <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RandomNameGeneratorLibrary" Version="1.2.2" />
   </ItemGroup>
 
   <ItemGroup>
