Add base screen `Found Signature`

--- a/OutlandSpaceClient/OutlandSpaceClient.csproj
+++ b/OutlandSpaceClient/OutlandSpaceClient.csproj
@@ -26,14 +26,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UI\Screens\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\ResourcesPrototype.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ResourcesPrototype.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -42,6 +43,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Properties\ResourcesPrototype.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ResourcesPrototype.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="UI\Screens\" />
   </ItemGroup>
 
 </Project>
