--- a/OutlandSpaceEngine.Tests/OutlandSpaceEngine.Tests.csproj
+++ b/OutlandSpaceEngine.Tests/OutlandSpaceEngine.Tests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OutlandSpaceClient\OutlandSpaceClient.csproj" />
     <ProjectReference Include="..\OutlandSpaceCommon\OutlandSpaceCommon.csproj" />
     <ProjectReference Include="..\OutlandSpaceEngine\OutlandSpaceEngine.csproj" />
   </ItemGroup>
